--- a/index.html
+++ b/index.html
@@ -78,7 +78,31 @@
                 </div>
             </section>
             <section>
-                
+                <div class="comments">
+                    <h2>Depoimentos de quem já <br>passou por aqui</h2>
+                    <div class="com">
+                        <div class="box">
+                            <div class="text">
+                                <img src="./assets/img/Aspas.png" alt="">
+                                <p>Eu sou cliente do Beautysalon há 5 anos e não troco <br>por nada! Certamente meu cabelo mudou muito depois <br>que comecei a tratar somente com produtos naturais <br>e veganos. São profissionais incríveis e qualificados.   </p>
+                            </div>
+                            <div class="user">
+                                <img src="./assets/img/Img.png" alt="">
+                                <p>Wanessa Souza</p>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="text">
+                                <img src="./assets/img/Aspas.png" alt="">
+                                <p>Minha mãe frequenta o salão há anos e me levou um dia <br>para conhecer. Minha experiência foi incrível, eu continuo <br>fazendo o a terapia capilar e isso salvou o meu cabelo. <br>Adoro todos os profissionais do Beautysalon.</p>
+                            </div>
+                            <div class="user">
+                                <img src="./assets/img/Img (1).png" alt="">
+                                <p>Luna Falcão</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
     </div>
