--- a/index.html
+++ b/index.html
@@ -117,7 +117,26 @@
                         <p>Entre em contato com a Beautysalon, <br>queremos tirar suas dúvidas, ouvir suas <br>críticas e sugestões.</p>
                         <button><span class="icon-whatsapp"></span><p>Entrar em contato</p></button>
                     </div>
+                    <div class="ctt">
+                        <p><span class="icon-phone"></span>11 99845-6754</p>
+                        <p><span class="icon-map-pin"></span>R. Amauri Souza, 346</p>
+                        <p><span class="icon-mail_outline mail"></span>contato@beautysalon.com</p>
+                    </div>
                 </div>
+                <footer>
+                    <div class="footer">
+                        <div class="text">
+                            <h2>beauty<span>salon</span>.</h2>
+                            <p>&copy; Beautysalon.</p>
+                            <p>todos os direitos reservados</p>
+                        </div>
+                        <div class="icons">
+                            <span class="icon-instagram"></span>
+                            <span class="icon-facebook"></span>
+                            <span class="icon-youtube"></span>
+                        </div>
+                    </div>
+                </footer>
             </section>
         </main>
     </div>
