--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <li><a href="">Contato</a></li>
                 </ul>
             </div>
+            <div class="menu">
+                <a><span class="icon-menu"></span></a>
+            </div>
         </header>
         <main>
             <section>
@@ -127,7 +130,7 @@
                     <div class="footer">
                         <div class="text">
                             <h2>beauty<span>salon</span>.</h2>
-                            <p>&copy; Beautysalon.</p>
+                            <p>&copy; 2021 Beautysalon.</p>
                             <p>todos os direitos reservados</p>
                         </div>
                         <div class="icons">
