--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <p>Wanessa Souza</p>
                             </div>
                         </div>
-                        <div class="box">
+                        <div class="box box2">
                             <div class="text">
                                 <img src="./assets/img/Aspas.png" alt="">
                                 <p>Minha mãe frequenta o salão há anos e me levou um dia <br>para conhecer. Minha experiência foi incrível, eu continuo <br>fazendo o a terapia capilar e isso salvou o meu cabelo. <br>Adoro todos os profissionais do Beautysalon.</p>
