--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             </div>
             <div class="options">
                 <ul>
-                    <li><a href="">Início</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Serviços</a></li>
-                    <li><a href="">Depoimentos</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="#home">Início</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#services">Serviços</a></li>
+                    <li><a href="#comments">Depoimentos</a></li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>
             </div>
             <div class="menu">
@@ -30,7 +30,7 @@
             </div>
         </header>
         <main>
-            <section>
+            <section id="home">
                 <div class="linha">
                     <div class="text">
                         <h2>Saúde natural para <br>os seus cabelos</h2>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section id="sobre">
                 <div class="sobreNos">
                     <div class="image">
                         <div class="deco"></div>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section id="services">
                 <div class="servicos">
                     <div class="text">
                         <h2>Serviços</h2>
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section id="comments">
                 <div class="comments">
                     <h2>Depoimentos de quem já <br>passou por aqui</h2>
                     <div class="com">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section id="contacts">
                 <div class="contato">
                     <div class="text">
                         <h2>Entre em contato <br>com a gente!</h2>
