--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#services">Serviços</a></li>
                     <li><a href="#comments">Depoimentos</a></li>
-                    <li><a href="#contact">Contato</a></li>
+                    <li><a href="#contacts">Contato</a></li>
                 </ul>
             </div>
             <div class="menu">
