--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
                     </div>
                     <div class="line">
                         <div class="box">
-                            <img src="./assets/img/mulher.png" alt="imagem de uma mulher">
+                            <span class="icon-woman-hair"></span>
                             <h3>Terapia capilar</h3>
                             <p>Terapia completa para couro <br>cabeludo e fios, protegendo todos <br>os tipos de cabelos, inclusive os <br>longos e finos.</p>
                         </div>
                         <div class="box">
-                            <img src="./assets/img/tesoura.png" alt="imagem de uma tesoura">
+                            <span class="icon-trim"></span>
                             <h3>Cortes</h3>
                             <p>A nossa equipe é repleta de <br>profissionais renomados, famosos <br>por lançarem tendências com <br>cortes diferenciados e clássicos.</p>
                         </div>
                         <div class="box">
-                            <img src="./assets/img/produtos.png" alt="imagem de produtos de beleza">
+                            <span class="icon-cosmetic"></span>
                             <h3>Tratamentos</h3>
                             <p>O beautysalon conta com <br>diversos tratamentos naturais e <br>totalmente veganos, para <br>qualquer tipo de cabelo.</p>
                         </div>
